@@ -527,3 +527,7 @@ S3method(summary, stepfun)
 S3method(as.dist, default)
 S3method(cophenetic, default)
 S3method(cophenetic, dendrogram)
+S3method(weighted.mean, Date)
+S3method(weighted.mean, default)
+S3method(weighted.mean, POSIXct)
+S3method(weighted.mean, POSIXlt)
